--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,34 +8,67 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
   <body class="bg-gray-300">
-    <div class="bg-blue-500  h-20 flex fixed w-screen">
-      <div class="h-full w-1/2 px-7 flex gap-2 items-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-          class="w-10 h-10 fill-white"
-        >
-          <path
-            d="M11.7 2.805a.75.75 0 01.6 0A60.65 60.65 0 0122.83 8.72a.75.75 0 01-.231 1.337 49.949 49.949 0 00-9.902 3.912l-.003.002-.34.18a.75.75 0 01-.707 0A50.009 50.009 0 007.5 12.174v-.224c0-.131.067-.248.172-.311a54.614 54.614 0 014.653-2.52.75.75 0 00-.65-1.352 56.129 56.129 0 00-4.78 2.589 1.858 1.858 0 00-.859 1.228 49.803 49.803 0 00-4.634-1.527.75.75 0 01-.231-1.337A60.653 60.653 0 0111.7 2.805z"
-          />
-          <path
-            d="M13.06 15.473a48.45 48.45 0 017.666-3.282c.134 1.414.22 2.843.255 4.285a.75.75 0 01-.46.71 47.878 47.878 0 00-8.105 4.342.75.75 0 01-.832 0 47.877 47.877 0 00-8.104-4.342.75.75 0 01-.461-.71c.035-1.442.121-2.87.255-4.286A48.4 48.4 0 016 13.18v1.27a1.5 1.5 0 00-.14 2.508c-.09.38-.222.753-.397 1.11.452.213.901.434 1.346.661a6.729 6.729 0 00.551-1.608 1.5 1.5 0 00.14-2.67v-.645a48.549 48.549 0 013.44 1.668 2.25 2.25 0 002.12 0z"
-          />
-          <path
-            d="M4.462 19.462c.42-.419.753-.89 1-1.394.453.213.902.434 1.347.661a6.743 6.743 0 01-1.286 1.794.75.75 0 11-1.06-1.06z"
-          />
-        </svg>
-        <h1 class="text-2xl font-semibold text-white ">GRADUATE</h1>
+    <div class="scrollbar">
+      <!-- navbar -->
+      <div class="bg-blue-500 h-20 flex fixed w-screen z-20 bg-opacity-60">
+        <div class="h-full w-1/2 px-7 flex gap-2 items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-10 h-10 fill-white"
+          >
+            <path
+              d="M11.7 2.805a.75.75 0 01.6 0A60.65 60.65 0 0122.83 8.72a.75.75 0 01-.231 1.337 49.949 49.949 0 00-9.902 3.912l-.003.002-.34.18a.75.75 0 01-.707 0A50.009 50.009 0 007.5 12.174v-.224c0-.131.067-.248.172-.311a54.614 54.614 0 014.653-2.52.75.75 0 00-.65-1.352 56.129 56.129 0 00-4.78 2.589 1.858 1.858 0 00-.859 1.228 49.803 49.803 0 00-4.634-1.527.75.75 0 01-.231-1.337A60.653 60.653 0 0111.7 2.805z"
+            />
+            <path
+              d="M13.06 15.473a48.45 48.45 0 017.666-3.282c.134 1.414.22 2.843.255 4.285a.75.75 0 01-.46.71 47.878 47.878 0 00-8.105 4.342.75.75 0 01-.832 0 47.877 47.877 0 00-8.104-4.342.75.75 0 01-.461-.71c.035-1.442.121-2.87.255-4.286A48.4 48.4 0 016 13.18v1.27a1.5 1.5 0 00-.14 2.508c-.09.38-.222.753-.397 1.11.452.213.901.434 1.346.661a6.729 6.729 0 00.551-1.608 1.5 1.5 0 00.14-2.67v-.645a48.549 48.549 0 013.44 1.668 2.25 2.25 0 002.12 0z"
+            />
+            <path
+              d="M4.462 19.462c.42-.419.753-.89 1-1.394.453.213.902.434 1.347.661a6.743 6.743 0 01-1.286 1.794.75.75 0 11-1.06-1.06z"
+            />
+          </svg>
+          <h1 class="text-2xl font-semibold text-white">GRADUATE</h1>
+        </div>
+        <div class="h-full w-1/2 px-7">
+          <ul class="h-full flex justify-end items-center space-x-3 list">
+            <li class="font-semibold text-white">
+              <a href="#Home">Home</a>
+            </li>
+            <li class="font-semibold text-white">
+              <a href="#About">About</a>
+            </li>
+            <li class="font-semibold text-white">
+              <a href="#Services">Services</a>
+            </li>
+            <li class="font-semibold text-white">
+              <a href="#Learn">Learn</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="h-full w-1/2 px-7">
-        <ul class="h-full flex justify-end items-center space-x-3">
-            <li class="font-semibold text-white">Home</li>
-            <li class="font-semibold text-white">About</li>
-            <li class="font-semibold text-white">Services</li>
-            <li class="font-semibold text-white">Learn</li>
-        </ul>
-      </div>
+      <!-- Homepage -->
+      <section id="Home" class="bg-gray-400 px-20 pt-32">
+          <div class="bg-white w-72 h-80 rounded-md relative overflow-hidden z-10">
+              <img src="./image-10.jpg" class="h-full object-cover bg-center " alt="">
+              <div class="w-full h-32 bg-black bg-opacity-50 absolute bottom-0">
+
+              </div>
+          </div>
+
+      </section>
+      <!-- About -->
+      <section id="About" class="bg-pink-500">
+
+      </section>
+      <!-- Services -->
+      <section id="Services" class="bg-green-500">
+
+      </section>
+      <!-- learn -->
+      <section id="Learn" class="bg-blue-500">
+
+      </section>
     </div>
   </body>
 </html>
