--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body class="bg-gray-300">
     <div class="scrollbar">
       <!-- navbar -->
-      <div class="bg-blue-500 h-20 flex fixed w-screen z-20 bg-opacity-60">
+      <div class="bg-[#1d1d1d] backdrop-blur-sm h-20 flex fixed w-screen z-20 bg-opacity-60">
         <div class="h-full w-1/2 px-7 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -48,27 +48,26 @@
         </div>
       </div>
       <!-- Homepage -->
-      <section id="Home" class="bg-gray-400 px-20 pt-32">
-          <div class="bg-white w-72 h-80 rounded-md relative overflow-hidden z-10">
-              <img src="./image-10.jpg" class="h-full object-cover bg-center " alt="">
-              <div class="w-full h-32 bg-black bg-opacity-50 absolute bottom-0">
-
-              </div>
-          </div>
-
+      <section id="Home" class="bg-[#151515] px-20 pt-32">
+        <div
+          class="bg-white w-72 h-80 rounded-md relative overflow-hidden z-10"
+        >
+          <img
+            src="./image-10.jpg"
+            class="h-full object-cover bg-center"
+            alt=""
+          />
+          <div
+            class="w-full h-32 bg-black bg-opacity-50 absolute bottom-0"
+          ></div>
+        </div>
       </section>
       <!-- About -->
-      <section id="About" class="bg-pink-500">
-
-      </section>
+      <section id="About" class="bg-[#1A2027]"></section>
       <!-- Services -->
-      <section id="Services" class="bg-green-500">
-
-      </section>
+      <section id="Services" class="bg-[#151515]"></section>
       <!-- learn -->
-      <section id="Learn" class="bg-blue-500">
-
-      </section>
+      <section id="Learn" class="bg-[#1a1a1a]"></section>
     </div>
   </body>
 </html>
