--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body class="bg-gray-300">
     <div class="scrollbar">
       <!-- navbar -->
-      <div class="bg-[#1d1d1d] backdrop-blur-sm h-20 flex fixed w-screen z-20 bg-opacity-60">
+      <div class="bg-[#1d1d1d] backdrop-blur-md h-20 flex fixed w-screen z-20 bg-opacity-60">
         <div class="h-full w-1/2 px-7 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -67,7 +67,7 @@
       <!-- Services -->
       <section id="Services" class="bg-[#151515]"></section>
       <!-- learn -->
-      <section id="Learn" class="bg-[#1a1a1a]"></section>
+      <section id="Learn" class="bg-[#1a2027]"></section>
     </div>
   </body>
 </html>
