--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   <body class="bg-gray-300">
     <div class="scrollbar">
       <!-- navbar -->
-      <div class="bg-[#1d1d1d] backdrop-blur-md h-20 flex fixed w-screen z-20 bg-opacity-60">
+      <div
+        class="bg-[#1d1d1d] backdrop-blur-md h-20 flex fixed w-screen z-20 bg-opacity-60"
+      >
         <div class="h-full w-1/2 px-7 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -48,19 +50,117 @@
         </div>
       </div>
       <!-- Homepage -->
-      <section id="Home" class="bg-[#151515] px-20 pt-32">
+      <section
+        id="Home"
+        class="bg-white bg-opacity-60 px-20 pt-32 grid grid-cols-4 gap-5"
+      >
+        <!-- firstchild -->
         <div
-          class="bg-white w-72 h-80 rounded-md relative overflow-hidden z-10"
+          data-price="34$"
+          class="bg-white children shadow-lg shadow-blue-400 hover:shadow-md hover:shadow-purple-500 duration-500 w-72 h-80 rounded-md relative overflow-hidden z-10"
         >
+          <!-- <div class="w-20 h-10 rounded-full bg-black/30 absolute right-2 top-2 flex justify-center items-center">
+            <span class="text-white font-semibold">23$</span>
+        </div> -->
+          <div
+            data-price="23$"
+            class="h-24 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+          >
+            <h3
+              class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
+            >
+              PLAY WITH CONSOLE
+            </h3>
+          </div>
           <img
             src="./image-10.jpg"
-            class="h-full object-cover bg-center"
+            class="h-full bg-center object-cover"
             alt=""
           />
-          <div
-            class="w-full h-32 bg-black bg-opacity-50 absolute bottom-0"
-          ></div>
         </div>
+        <!-- second -->
+        <div
+          data-price="55$"
+          class="bg-white w-72 h-80 children rounded-md relative overflow-hidden z-10"
+        >
+          <div
+            class="h-24 hover:h-full duration-500 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+          >
+            <h3
+              class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
+            >
+              PLAY WITH CONSOLE
+            </h3>
+          </div>
+          <img
+            src="./image-10.jpg"
+            class="h-full bg-center object-cover"
+            alt=""
+          />
+        </div>
+
+        <!-- third -->
+        <div
+          data-price="52$"
+          class="bg-white w-72 h-80 children rounded-md relative overflow-hidden z-10"
+        >
+          <div
+            class="h-24 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+          >
+            <h3
+              class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
+            >
+              PLAY WITH CONSOLE
+            </h3>
+          </div>
+          <img
+            src="./image-10.jpg"
+            class="h-full bg-center object-cover"
+            alt=""
+          />
+        </div>
+        <!-- fourth -->
+        <div
+          data-price="77$"
+          class="bg-white w-72 h-80 children rounded-md relative overflow-hidden z-10"
+        >
+          <div
+            class="h-24 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+          >
+            <h3
+              class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
+            >
+              PLAY WITH CONSOLE
+            </h3>
+          </div>
+          <img
+            src="./image-10.jpg"
+            class="h-full bg-center object-cover"
+            alt=""
+          />
+        </div>
+        <!-- fith -->
+        <div
+          data-price="85$"
+          class="bg-white w-72 h-80 children rounded-md relative overflow-hidden z-10"
+        >
+          <div
+            class="h-24 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+          >
+            <h3
+              class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
+            >
+              PLAY WITH CONSOLE
+            </h3>
+          </div>
+          <img
+            src="./image-10.jpg"
+            class="h-full bg-center object-cover"
+            alt=""
+          />
+        </div>
+
+       
       </section>
       <!-- About -->
       <section id="About" class="bg-[#1A2027]"></section>
