--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
           class="bg-white w-72 h-80 children rounded-md relative overflow-hidden z-10"
         >
           <div
-            class="h-24 hover:h-full duration-500 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md w-full"
+            class="h-24 hover:h-full duration-500 bg-black bg-opacity-60 flex justify-center items-center absolute bottom-0 backdrop-blur-md hover:backdrop-blur-sm w-full"
           >
             <h3
               class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
