change images on banner

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
             </h3>
           </div>
           <img
-            src="./image-10.jpg"
+            src="./image-3.jpg"
             class="h-full bg-center object-cover"
             alt=""
           />
@@ -96,12 +96,12 @@
             <h3
               class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
             >
-              PLAY WITH CONSOLE
+              EXPLORE EXPERIENCES
             </h3>
           </div>
           <img
-            src="./image-10.jpg"
-            class="h-full bg-center object-cover"
+            src="./image-7.jpg"
+            class="h-full bg-bottom object-cover"
             alt=""
           />
         </div>
@@ -116,12 +116,12 @@
             <h3
               class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
             >
-              PLAY WITH CONSOLE
+              EXPLORE EXPERIENCES
             </h3>
           </div>
           <img
-            src="./image-10.jpg"
-            class="h-full bg-center object-cover"
+            src="./image-2.jpg"
+            class="h-full bg-center w-full object-cover"
             alt=""
           />
         </div>
@@ -136,12 +136,12 @@
             <h3
               class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-white to-pink-500"
             >
-              PLAY WITH CONSOLE
+              EXPLORE EXPERIENCES
             </h3>
           </div>
           <img
-            src="./image-10.jpg"
-            class="h-full bg-center object-cover"
+            src="./image-8.jpg"
+            class="h-full w-full bg-center object-cover"
             alt=""
           />
         </div>
