work on part about

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,12 @@
        
       </section>
       <!-- About -->
-      <section id="About" class="bg-[#1A2027]"></section>
+      <section id="About" class="bg-[#1A2027] relative">
+        <div class="h-full absolute w-full bg-black/40 flex justify-between items-center px-20">
+
+        </div>
+        <img src="./image-10.jpg" class="w-full  bg-center object-cover h-full" alt="">
+      </section>
       <!-- Services -->
       <section id="Services" class="bg-[#151515]"></section>
       <!-- learn -->
