--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,12 @@
       <!-- Homepage -->
       <section
         id="Home"
-        class="bg-white bg-opacity-60 px-20 pt-32 grid grid-cols-4 gap-5"
+        class="bg-black/80 px-20 pt-32 grid grid-cols-4 gap-5"
       >
         <!-- firstchild -->
         <div
           data-price="34$"
-          class="bg-white children shadow-lg shadow-blue-400 hover:shadow-md hover:shadow-purple-500 duration-500 w-72 h-80 rounded-md relative overflow-hidden z-10"
+          class="bg-white children shadow-sm shadow-blue-400 hover:shadow-md hover:shadow-purple-500 duration-500 w-72 h-80 rounded-md relative overflow-hidden z-10"
         >
           <!-- <div class="w-20 h-10 rounded-full bg-black/30 absolute right-2 top-2 flex justify-center items-center">
             <span class="text-white font-semibold">23$</span>
