work on part forms

--- a/public/index.html
+++ b/public/index.html
@@ -158,32 +158,32 @@
       </section>
       <!-- Services -->
       <section id="Services" class="bg-[#151515] flex justify-center items-center">
-           <div class="w-[470px] h-[500px] bg-white/80 overflow-hidden rounded-md">
-            <div class="h-[15%] flex justify-center items-center shadow-md">
-                  <h2 class="text-3xl text-blue-600">REGISTER HERE</h2>
+           <div class="w-[470px] h-[500px] bg-gray-600/40  overflow-hidden rounded-md">
+            <div class="h-[15%] flex justify-center items-center shadow-sm shadow-white">
+                  <h2 class="text-3xl text-white">REGISTER HERE</h2>
             </div>
             <div class="h-[85%] ">
               <form action="" class="h-full w-full flex  justify-center py-10">
-                <div class="space-y-5">
+                <div class="space-y-5 relative ">
                   <!-- first input -->
                   <div class=" h-10  flex justify-between">
                     <div class="h-full w-[30%] flex items-center">
 
-                      <label for="firstname" class="text-[20px] text-gray-600">Firstname</label>
+                      <label for="firstname" class="text-[20px] text-white">Firstname</label>
                     </div>
-                    <div class="w-[70%] h-full bg-red-500 ">
-                      <input id="firstname" placeholder="Your firstname" type="number"  class="px-5 outline-none  h-full placeholder:text-gray-600 w-full  text-gray-700  border bg-blue-200     rounded-sm">
+                    <div class="w-[70%] h-full  ">
+                      <input id="firstname" placeholder="Your firstname" type="text"  class="px-5 outline-none  h-full placeholder:text-gray-300 w-full  text-white   bg-gray-600/80     rounded-md">
                     </div>
                   </div>
-<!-- Second input -->
-                   <div class="border h-10  rounded-full bg-blue-200 overflow-hidden flex">
+                  <!-- Second input -->
+                   <div class="h-10  rounded-full  bg-gray-600/80  overflow-hidden flex">
                     <div class="h-full w-[15%] flex justify-center items-center">
-                          <i class="fa-solid fa-magnifying-glass-dollar"></i>
+                          <i class="fa-solid text-gray-200 fa-magnifying-glass-dollar"></i>
                     </div>
                     <div class="h-full w-[45%]">
-                        <input type="text" class="h-full w-full px-4 bg-transparent placeholder:text-gray-600 outline-none" placeholder="search...">
+                        <input type="text" class="h-full w-full text-white px-4 bg-transparent placeholder:text-gray-300 outline-none" placeholder="search...">
                     </div>
-                    <div class="h-full w-[40%]  flex items-center text-sm space-x-2">
+                    <div class="h-full w-[40%] text-gray-300 flex items-center text-sm space-x-2">
                         <span>Powered by</span>
                         <a href="" class="hover:text-blue-500 duration-500">
                           <i class="fa-brands fa-algolia"></i>
@@ -193,10 +193,23 @@
                   </div>
                   <!-- third input -->
                   <div class=" h-10  ">
-                   <input type="file" name="" class="w-full h-full rounded-full bg-blue-200 border outline-none file:rounded-full px-2 py-1 file:text-white file:border-none file:bg-blue-600/60 file:py-1" id="">
+                   <input type="file" name="" class="w-full h-full rounded-full text-white  bg-gray-600/80  outline-none file:rounded-full px-2 py-1 file:text-white file:border-none file:bg-gray-800 file:py-1" id="">
                   </div>
-                   <div class=" h-10  ">
-                   <input type="checkbox" name="" class="w-full accent-pink-500 h-full rounded-full bg-blue-200 border outline-none file:rounded-full px-2 py-1 file:text-white file:border-none file:bg-blue-600/60 file:py-1" id="">
+                  <!-- fourth -->
+                  <div class="">
+                      <input type="file" class="bg-gray-600/80 w-full file:border-none h-10 file:h-full file:mr-6 file:bg-gray-900 file:text-white overflow-hidden rounded-full text-white">
+                  </div>
+                  <!-- checkbox -->
+                  <div class="px-2 space-x-3">
+                      <input type="checkbox" class="accent-blue-600 " name="" id="contrat">
+                      <label for="contrat" class="text-white text-[18px]">Accepter Les contrat</label>
+                  </div>
+                  <!-- button -->
+                  <div class="flex justify-center w-full absolute bottom-0">
+                    <button class="bg-blue-700 px-4 py-1 rounded-sm hover:bg-emerald-500 duration-500 flex gap-3 items-center text-white">
+                      <i class="fa-solid fa-code"></i>
+                      <span>Submit</span>
+                    </button>
                   </div>
                 </div>
               </form>
@@ -204,11 +217,10 @@
            </div>
       </section>
       <!-- learn -->
-      <section id="Learn" class="bg-[#1a2027] flex justify-center items-center">
+      <section id="Learn" class="bg-[#1a2027] flex justify-center items-center overflow-hidden relative">
 
-        <div class="bg-blue-500 w-96 h-96 blur-3xl bg-opacity-60 rounded-full">
-
-        </div>
+            
+            <div class="bg-purple-500/30 rounded-full h-[600px] w-[600px] absolute -left-40 blur-3xl -top-40"></div>
       </section>
     </div>
   </body>
