remove blur effect on part learn

--- a/public/index.html
+++ b/public/index.html
@@ -217,11 +217,10 @@
            </div>
       </section>
       <!-- learn -->
-      <section id="Learn" class="bg-[#1a2027] flex justify-center items-center overflow-hidden relative">
+      <section id="Learn" class="bg-[#1a2027] flex justify-center items-center">
 
     
-            <div class="bg-purple-500/30 rounded-full h-[600px] w-[600px] absolute -left-40 blur-3xl -top-40"></div>
-      </section>
+           
     </div>
   </body>
 </html>
