--- a/public/index.html
+++ b/public/index.html
@@ -15,27 +15,27 @@
       </div>
       <!-- navbar -->
       <div
-        class="lg:bg-[#151515] mobile:backdrop-blur-lg lg:z-50 mobile:absolute mobile:top-0 mobile:z-50 lg:top-0 lg:translate-x-0  mobile:-translate-x-[100%]   md:bg-purple-600 sm:bg-orange-500 mobile:bg-black/90 mobile:w-[80%] mobile:h-screen mobile:block lg:backdrop-blur-md lg:h-20 lg:flex lg:fixed lg:w-screen z-20 lg:bg-opacity-60"
+        class="lg:bg-[#151515] mobile:backdrop-blur-lg lg:z-50 mobile:fixed -left-[100%] left-0 mobile:top-0 mobile:z-50 lg:top-0 lg:translate-x-0  mobile:-translate-x-0   md:bg-purple-600 sm:bg-orange-500 mobile:bg-black/90 mobile:w-[80%] mobile:h-screen mobile:block lg:backdrop-blur-md lg:h-20 lg:flex lg:fixed lg:w-screen z-20 lg:bg-opacity-60"
       >
-        <div class="lg:h-full mobile:relative mobile:h-[7%] mobile:flex mobile:items-center  mobile:w-full w-1/2 lg:px-7 mobile:px-3 lg:flex lg:gap-2  lg:items-center">
+        <div class="lg:h-full mobile:relative mobile:h-[10%] mobile:flex mobile:items-center  mobile:w-full w-1/2 lg:px-7 mobile:px-3 lg:flex lg:gap-2  lg:items-center">
           <svg xmlns="http://www.w3.org/2000/svg"   class="w-10 h-10 fill-white" height="16" width="20" viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M192 64C86 64 0 150 0 256S86 448 192 448H448c106 0 192-86 192-192s-86-192-192-192H192zM496 168a40 40 0 1 1 0 80 40 40 0 1 1 0-80zM392 304a40 40 0 1 1 80 0 40 40 0 1 1 -80 0zM168 200c0-13.3 10.7-24 24-24s24 10.7 24 24v32h32c13.3 0 24 10.7 24 24s-10.7 24-24 24H216v32c0 13.3-10.7 24-24 24s-24-10.7-24-24V280H136c-13.3 0-24-10.7-24-24s10.7-24 24-24h32V200z"/></svg>
           <h1 class="text-2xl mobile:text-[20px] mobile:ml-3 font-semibold text-white">JUST PLAY</h1>
           <div class="lg:hidden mobile:absolute mobile:top-5 mobile:right-5 ">
             <i class="fa-solid fa-xmark text-white text-[24px]"></i>
           </div>
         </div>
-        <div class="lg:h-full lg:w-1/2 lg:px-7 mobile:w-full mobile:h-[93%] ">
-          <ul class="lg:h-full lg:flex lg:justify-end lg:items-center mobile:h-full  lg:space-x-3 list mobile:uppercase lg:lowercase mobile:space-y-5 mobile:px-28 mobile:py-32 lg:p-0 ">
-            <li class="font-semibold text-white">
+        <div class="lg:h-full lg:w-1/2 lg:px-7 mobile:w-full mobile:h-[90%] ">
+          <ul class="lg:h-full lg:flex lg:justify-end lg:items-center mobile:h-full  lg:space-x-3 list mobile:uppercase lg:lowercase  mobile:px-24 mobile:py-40 lg:p-0 ">
+            <li class="font-semibold mobile:mb-5 text-white">
               <a href="#Home">Home</a>
             </li>
-            <li class="font-semibold text-white">
+            <li class="font-semibold mobile:mb-5 text-white">
               <a href="#About">About</a>
             </li>
-            <li class="font-semibold text-white">
+            <li class="font-semibold mobile:mb-5 text-white">
               <a href="#Services">Services</a>
             </li>
-            <li class="font-semibold text-white">
+            <li class="font-semibold mobile:mb-5 text-white">
               <a href="#Learn">Learn</a>
             </li>
           </ul>
@@ -48,7 +48,7 @@
       <!-- Homepage -->
       <section
         id="Home"
-        class="lg:bg-black/80 lg:h-[1000px]  mobile:h-auto mobile:px-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1 mobile:pt-24 mobile:gap-5 mobile:grid"
+        class="lg:bg-black/80 lg:h-[1000px]  mobile:h-auto mobile:pl-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1 mobile:pt-24 mobile:gap-5 mobile:grid"
       >
         <!-- firstchild -->
         <div
