--- a/public/index.html
+++ b/public/index.html
@@ -248,6 +248,7 @@
 
   document.querySelectorAll('li').forEach((it)=>{
       it.addEventListener('click',()=>{
+        document.querySelector('.upbar').classList.remove('opacity-0')
         document.querySelector('.navbar').classList.remove('mobile:translate-x-0')
       })
   })
