change images on home part

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <!-- navbar -->
       <div
 
-        class="navbar lg:bg-transparent mobile:bg-black/50 lg:z-50 mobile:-translate-x-[100%] duration-500  mobile:z-50 lg:translate-x-0 mobile:fixed mobile:top-0   md:bg-purple-600 sm:bg-orange-500  mobile:w-full mobile:h-screen mobile:block lg:backdrop-blur-md lg:h-20 lg:flex lg:fixed lg:w-screen z-20 "
+        class="navbar lg:bg-[#0099ff]  mobile:bg-black/50 lg:z-50 mobile:-translate-x-[100%] duration-500  mobile:z-50 lg:translate-x-0 mobile:fixed mobile:top-0   md:bg-purple-600 sm:bg-orange-500  mobile:w-full mobile:h-screen mobile:block lg:backdrop-blur-md lg:h-20 lg:flex lg:fixed lg:w-screen z-20 "
       >
         <div class="lg:h-full mobile:relative mobile:h-[10%] mobile:border-r lg:border-none mobile:justify-between  lg:bg-transparent  mobile:flex mobile:items-center  mobile:w-[80%] mobile:bg-black/90 mobile:backdrop-blur-md  w-1/2 lg:px-7 mobile:px-5 lg:flex lg:gap-2  lg:items-center">
           <div class="flex items-center">
@@ -53,7 +53,7 @@
       <!-- Homepage -->
       <section
         id="Home"
-        class="lg:bg-black/80 lg:h-[1000px] lg:bg-gray-900    mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
+        class="lg:bg-black/80 lg:h-screen lg:bg-[#151515] lg:overflow-y-auto mobile:bg-gradient-to-tr mobile:from-[#0099ff] mobile:to-[#0092F3] lg:bg-gradient-to-t lg:from-black/40 lg:to-black/50   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
       >
         <!-- firstchild -->
         <div
