--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,10 @@
         </div>
       </div>
 
-
-
-
       <!-- Homepage -->
       <section
         id="Home"
-        class="lg:bg-black/80 lg:h-screen lg:bg-[#151515] lg:overflow-y-auto mobile:bg-gradient-to-tr mobile:from-[#0099ff] mobile:to-[#0092F3] lg:bg-gradient-to-t lg:from-black/40 lg:to-black/50   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
+        class="lg:bg-black/80 lg:h-auto lg:bg-[#151515] lg:overflow-y-auto mobile:bg-gradient-to-tr mobile:from-[#0099ff] mobile:to-[#0092F3] lg:bg-gradient-to-t lg:from-black/40 lg:to-black/50   mobile:h-auto mobile:pt-28 mobile:pb-10 mobile:pl-16 lg:px-20 lg:pt-32 lg:grid lg:grid-cols-4 lg:gap-5 mobile:grid-cols-1  mobile:space-y-5 lg:space-y-0"
       >
         <!-- firstchild -->
         <div
