--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
         class="navbar lg:bg-[#0099ff]  mobile:bg-black/50 lg:z-50 mobile:-translate-x-[100%] duration-500  mobile:z-50 lg:translate-x-0 mobile:fixed mobile:top-0   md:bg-purple-600 sm:bg-orange-500  mobile:w-full mobile:h-screen mobile:block lg:backdrop-blur-md lg:h-20 lg:flex lg:fixed lg:w-screen z-20 "
       >
-        <div class="lg:h-full mobile:relative mobile:h-[10%] mobile:border-r lg:border-none mobile:justify-between  lg:bg-transparent  mobile:flex mobile:items-center  mobile:w-[80%] mobile:bg-black/90 mobile:backdrop-blur-md  w-1/2 lg:px-7 mobile:px-5 lg:flex lg:gap-2  lg:items-center">
+        <div class="lg:h-full mobile:relative mobile:h-[10%]  lg:border-none mobile:justify-between  lg:bg-transparent  mobile:flex mobile:items-center  mobile:w-[80%] mobile:bg-black/90 mobile:backdrop-blur-md  w-1/2 lg:px-7 mobile:px-5 lg:flex lg:gap-2  lg:items-center">
           <div class="flex items-center">
 
             <svg xmlns="http://www.w3.org/2000/svg"   class="w-10 h-10 fill-white" height="16" width="20" viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M192 64C86 64 0 150 0 256S86 448 192 448H448c106 0 192-86 192-192s-86-192-192-192H192zM496 168a40 40 0 1 1 0 80 40 40 0 1 1 0-80zM392 304a40 40 0 1 1 80 0 40 40 0 1 1 -80 0zM168 200c0-13.3 10.7-24 24-24s24 10.7 24 24v32h32c13.3 0 24 10.7 24 24s-10.7 24-24 24H216v32c0 13.3-10.7 24-24 24s-24-10.7-24-24V280H136c-13.3 0-24-10.7-24-24s10.7-24 24-24h32V200z"/></svg>
@@ -29,8 +29,8 @@
             <i class="fa-solid fa-xmark text-white text-[24px]"></i>
           </div>
         </div>
-        <div class="lg:h-full lg:w-1/2 lg:px-7 mobile:bg-black/90 mobile:border-r  lg:bg-transparent mobile:w-[80%] mobile:backdrop-blur-md mobile:h-[90%] ">
-          <ul class="lg:h-full lg:flex lg:justify-end lg:items-center mobile:h-full  lg:space-x-3 list mobile:uppercase  lg:lowercase  mobile:px-24 mobile:py-40 lg:p-0 ">
+        <div class="lg:h-full lg:w-1/2 lg:px-7 mobile:bg-black/90   lg:bg-transparent mobile:w-[80%] mobile:backdrop-blur-md mobile:h-[90%] ">
+          <ul class="lg:h-full lg:flex lg:justify-end lg:items-center mobile:h-full  lg:space-x-3 list mobile:uppercase  lg:lowercase  mobile:px-24 mobile:pt-60 lg:p-0 ">
             <li class="font-semibold mobile:mb-5 lg:mb-0 text-white">
               <a href="#Home">Home</a>
             </li>
@@ -243,8 +243,15 @@
            </div>
       </section>
       <!-- learn -->
-      <section id="Learn" class="bg-[#1a2027] mobile:h-80 mobile:bg-black flex justify-center items-center">
-      
+      <section id="Learn" class="bg-[#1a2027] mobile:h-auto mobile:py-20  mobile:bg-black flex justify-center items-center">
+          <div class="space-x-3">
+              <i class="fa-brands fa-facebook text-[25px] p-2 bg-white text-blue-600 rounded-sm " ></i>
+               <i class="fa-brands fa-whatsapp text-[25px] p-2 bg-white text-emerald-600 rounded-sm " ></i>
+                <i class="fa-brands  fa-square-instagram text-[25px] p-2 bg-white text-pink-600 rounded-sm " ></i>
+                 <i class="fa-brands  fa-telegram text-[25px] p-2 bg-white text-blue-600 rounded-sm " ></i>
+          </div>
+          </div>
+         
     </div>
 
   </body>
